--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "make test",
     "watch": "make watch",
     "build": "make build",
-    "dev": "make watch && make start &"
+    "dev": "make watch && make start &",
+    "cucumber": "./node_modules/.bin/cucumber-js"
   },
   "repository": {
     "type": "git",
@@ -37,10 +38,12 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.11.1",
+    "chromedriver": "^2.28.0",
     "classnames": "2.1.3",
     "cookie": "0.2.2",
     "copy-webpack-plugin": "0.2.0",
     "css-loader": "0.23.1",
+    "cucumber": "^1.3.2",
     "eslint": "1.3.1",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-react": "3.3.1",
@@ -83,7 +86,7 @@
     "sass-lint": "1.5.1",
     "sass-loader": "2.0.1",
     "scratchr2_translations": "git://github.com/LLK/scratchr2_translations.git#master",
-    "selenium-webdriver": "2.44.0",
+    "selenium-webdriver": "^2.44.0",
     "slick-carousel": "1.5.8",
     "source-map-support": "0.3.2",
     "style-loader": "0.12.3",
